new config framework is working, but the bot crashes if the config isn't created when joining a server, i will make it create it when joining...